--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.12.0
   firebase_auth: ^4.6.0
   cloud_firestore: ^4.7.0
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
