--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.6.0
   cloud_firestore: ^4.7.0
   dotted_border: ^2.0.0+3
+  flutter_otp_text_field: ^1.1.1
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
