--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   email_validator: ^2.1.17
   google_sign_in: ^5.4.4
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
