--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   email_validator: ^2.1.17
   google_sign_in: ^5.4.4
   url_launcher: ^6.1.11
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
